src/parser.output
Nonterminals useless in grammar

   TOP_LEVEL
   TOP_LIST
   DEC_FUNCTION
   ARGUMENT_LIST
   TYPE
   BODY
   STATEMENT
   NEW_SCOPE
   RETURN_STATEMENT
   DEC_VARIABLE
   GLO_DEC_VARIABLE
   FUNCTION_STATEMENT
   IFANDORELSEORELIF
   IFANDORELIF
   WHILE_STATEMENT
   DO_STATEMENT
   IF_STATEMENT
   ELSE_IF_STATEMENT
   ELSE_STATEMENT


Terminals unused in grammar

   T_LSQBRACKET
   T_RSQBRACKET
   T_LCUBRACKET
   T_RCUBRACKET
   T_LTRIBRACKET
   T_RTRIBRACKET
   T_DOT
   T_SEMICOLON
   T_SPEACHMARK
   T_APOSTROPHE
   T_INT
   T_DOUBLE
   T_STRING
   T_BOOL
   T_VOID
   T_LONG
   T_COMMENT
   T_RETURN
   T_ELSE
   T_IF
   T_WHILE
   T_DO


Rules useless in grammar

   52 TOP_LEVEL: TOP_LIST

   53 TOP_LIST: TOP_LIST DEC_FUNCTION
   54         | TOP_LIST GLO_DEC_VARIABLE
   55         | DEC_FUNCTION
   56         | GLO_DEC_VARIABLE

   57 DEC_FUNCTION: TYPE T_ID T_LBRACKET ARGUMENT_LIST T_RBRACKET T_LCUBRACKET BODY T_RCUBRACKET

   58 ARGUMENT_LIST: ARGUMENT_LIST T_COMMA TYPE T_ID
   59              | TYPE T_ID
   60              | %empty

   61 TYPE: T_INT
   62     | T_DOUBLE
   63     | T_STRING
   64     | T_VOID
   65     | T_LONG

   66 BODY: BODY STATEMENT
   67     | STATEMENT
   68     | %empty

   69 STATEMENT: RETURN_STATEMENT
   70          | DEC_VARIABLE
   71          | FUNCTION_STATEMENT
   72          | EXPR T_SEMICOLON
   73          | IFANDORELSEORELIF
   74          | WHILE_STATEMENT
   75          | DO_STATEMENT
   76          | NEW_SCOPE

   77 NEW_SCOPE: T_LCUBRACKET BODY T_RCUBRACKET
   78          | T_LCUBRACKET T_RCUBRACKET

   79 RETURN_STATEMENT: T_RETURN EXPR T_SEMICOLON

   80 DEC_VARIABLE: TYPE T_ID T_ASSIGN EXPR T_SEMICOLON
   81             | TYPE T_ID T_SEMICOLON

   82 GLO_DEC_VARIABLE: TYPE T_ID T_ASSIGN EXPR T_SEMICOLON
   83                 | TYPE T_ID T_SEMICOLON

   84 FUNCTION_STATEMENT: T_ID T_LBRACKET ARGUMENT_LIST_NO_TYPE T_RBRACKET T_SEMICOLON

   85 IFANDORELSEORELIF: IFANDORELIF ELSE_STATEMENT
   86                  | IFANDORELIF

   87 IFANDORELIF: IFANDORELIF ELSE_IF_STATEMENT
   88            | IF_STATEMENT

   89 WHILE_STATEMENT: T_WHILE EXPR T_LCUBRACKET BODY T_RCUBRACKET

   90 DO_STATEMENT: T_DO T_LCUBRACKET BODY T_RCUBRACKET T_WHILE EXPR T_SEMICOLON

   91 IF_STATEMENT: T_IF EXPR T_LCUBRACKET BODY T_RCUBRACKET

   92 ELSE_IF_STATEMENT: T_ELSE T_IF EXPR T_LCUBRACKET BODY T_RCUBRACKET

   93 ELSE_STATEMENT: T_ELSE T_LCUBRACKET BODY T_RCUBRACKET


State 10 conflicts: 3 shift/reduce
State 18 conflicts: 3 shift/reduce, 17 reduce/reduce
State 19 conflicts: 3 shift/reduce, 17 reduce/reduce
State 59 conflicts: 1 shift/reduce
State 60 conflicts: 17 shift/reduce
State 61 conflicts: 17 shift/reduce
State 62 conflicts: 17 shift/reduce
State 63 conflicts: 17 shift/reduce
State 64 conflicts: 17 shift/reduce
State 65 conflicts: 17 shift/reduce
State 66 conflicts: 17 shift/reduce
State 67 conflicts: 17 shift/reduce
State 68 conflicts: 17 shift/reduce
State 69 conflicts: 17 shift/reduce
State 70 conflicts: 17 shift/reduce
State 71 conflicts: 3 shift/reduce, 17 reduce/reduce
State 73 conflicts: 3 shift/reduce, 17 reduce/reduce
State 74 conflicts: 3 shift/reduce, 17 reduce/reduce
State 75 conflicts: 3 shift/reduce, 17 reduce/reduce
State 76 conflicts: 3 shift/reduce, 17 reduce/reduce
State 77 conflicts: 3 shift/reduce, 17 reduce/reduce
State 78 conflicts: 3 shift/reduce, 17 reduce/reduce
State 79 conflicts: 3 shift/reduce, 17 reduce/reduce
State 80 conflicts: 3 shift/reduce, 17 reduce/reduce
State 81 conflicts: 3 shift/reduce, 17 reduce/reduce
State 82 conflicts: 3 shift/reduce, 17 reduce/reduce
State 83 conflicts: 3 shift/reduce, 17 reduce/reduce
State 84 conflicts: 3 shift/reduce, 17 reduce/reduce
State 85 conflicts: 3 shift/reduce, 17 reduce/reduce
State 86 conflicts: 3 shift/reduce, 17 reduce/reduce
State 87 conflicts: 3 shift/reduce, 17 reduce/reduce
State 88 conflicts: 20 reduce/reduce
State 89 conflicts: 20 reduce/reduce
State 90 conflicts: 20 reduce/reduce
State 94 conflicts: 1 shift/reduce
State 95 conflicts: 17 shift/reduce


Grammar

    0 $accept: ROOT $end

    1 ROOT: EXPR

    2 ARGUMENT_LIST_NO_TYPE: ARGUMENT_LIST_NO_TYPE T_COMMA EXPR
    3                      | EXPR
    4                      | %empty

    5 EXPR: TERM
    6     | EXPR T_COMMA TERM
    7     | EXPR T_PLUS TERM
    8     | EXPR T_MINUS TERM
    9     | ASSIGNOP
   10     | BITWISEOP
   11     | CONDITIONOP

   12 TERM: FACTOR
   13     | TERM T_TIMES FACTOR
   14     | TERM T_DIVIDE FACTOR
   15     | TERM T_MODULUS FACTOR

   16 FACTOR: T_LBRACKET EXPR T_RBRACKET
   17       | T_ID T_LBRACKET ARGUMENT_LIST_NO_TYPE T_RBRACKET
   18       | NUMBER
   19       | T_ID
   20       | T_SIZE_OF T_ID
   21       | EXPR T_QMARK EXPR T_COLON EXPR
   22       | T_ID T_INC
   23       | T_ID T_DEC

   24 NUMBER: T_NUMBER
   25       | T_MINUS T_NUMBER

   26 BITWISEOP: EXPR T_AND TERM
   27          | EXPR T_OR TERM
   28          | EXPR T_XOR TERM
   29          | T_TILDA TERM
   30          | EXPR T_LSHIFT TERM
   31          | EXPR T_RSHIFT TERM

   32 ASSIGNOP: T_ID T_ASSIGN EXPR
   33         | T_ID T_ADDASSIGN EXPR
   34         | T_ID T_SUBASSIGN EXPR
   35         | T_ID T_MULASSIGN EXPR
   36         | T_ID T_DIVASSIGN EXPR
   37         | T_ID T_MODASSIGN EXPR
   38         | T_ID T_LSHIFTASSIGN EXPR
   39         | T_ID T_RSHIFTASSIGN EXPR
   40         | T_ID T_ANDASSIGN EXPR
   41         | T_ID T_ORASSIGN EXPR
   42         | T_ID T_XORASSIGN EXPR

   43 CONDITIONOP: EXPR T_LEQUAL TERM
   44            | EXPR T_LAND TERM
   45            | EXPR T_LOR TERM
   46            | T_NOT TERM
   47            | EXPR T_LNEQUAL TERM
   48            | EXPR T_MORE TERM
   49            | EXPR T_LESS TERM
   50            | EXPR T_LMOREEQ TERM
   51            | EXPR T_LLESSEQ TERM


Terminals, with rules where they appear

$end (0) 0
error (256)
T_LSQBRACKET (258)
T_RSQBRACKET (259)
T_LCUBRACKET (260)
T_RCUBRACKET (261)
T_LTRIBRACKET (262)
T_RTRIBRACKET (263)
T_LBRACKET (264) 16 17
T_RBRACKET (265) 16 17
T_ASSIGN (266) 32
T_DOT (267)
T_COMMA (268) 2 6
T_COLON (269) 21
T_QMARK (270) 21
T_SEMICOLON (271)
T_SPEACHMARK (272)
T_APOSTROPHE (273)
T_NOT (274) 46
T_AND (275) 26
T_OR (276) 27
T_MORE (277) 48
T_LESS (278) 49
T_XOR (279) 28
T_TILDA (280) 29
T_INT (281)
T_DOUBLE (282)
T_STRING (283)
T_BOOL (284)
T_VOID (285)
T_LONG (286)
T_TIMES (287) 13
T_DIVIDE (288) 14
T_PLUS (289) 7
T_MINUS (290) 8 25
T_MODULUS (291) 15
T_INC (292) 22
T_DEC (293) 23
T_ADDASSIGN (294) 33
T_SUBASSIGN (295) 34
T_MULASSIGN (296) 35
T_DIVASSIGN (297) 36
T_MODASSIGN (298) 37
T_LSHIFTASSIGN (299) 38
T_RSHIFTASSIGN (300) 39
T_ANDASSIGN (301) 40
T_XORASSIGN (302) 42
T_ORASSIGN (303) 41
T_LAND (304) 44
T_LOR (305) 45
T_LEQUAL (306) 43
T_LNEQUAL (307) 47
T_LLESSEQ (308) 51
T_LMOREEQ (309) 50
T_LSHIFT (310) 30
T_RSHIFT (311) 31
T_NUMBER (312) 24 25
T_ID (313) 17 19 20 22 23 32 33 34 35 36 37 38 39 40 41 42
T_COMMENT (314)
T_RETURN (315)
T_SIZE_OF (316) 20
T_ELSE (317)
T_IF (318)
T_WHILE (319)
T_DO (320)


Nonterminals, with rules where they appear

$accept (66)
    on left: 0
ROOT (67)
    on left: 1, on right: 0
ARGUMENT_LIST_NO_TYPE (68)
    on left: 2 3 4, on right: 2 17
EXPR (69)
    on left: 5 6 7 8 9 10 11, on right: 1 2 3 6 7 8 16 21 26 27 28
    30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 47 48 49 50 51
TERM (70)
    on left: 12 13 14 15, on right: 5 6 7 8 13 14 15 26 27 28 29 30
    31 43 44 45 46 47 48 49 50 51
FACTOR (71)
    on left: 16 17 18 19 20 21 22 23, on right: 12 13 14 15
NUMBER (72)
    on left: 24 25, on right: 18
BITWISEOP (73)
    on left: 26 27 28 29 30 31, on right: 10
ASSIGNOP (74)
    on left: 32 33 34 35 36 37 38 39 40 41 42, on right: 9
CONDITIONOP (75)
    on left: 43 44 45 46 47 48 49 50 51, on right: 11


State 0

    0 $accept: . ROOT $end

    T_LBRACKET  shift, and go to state 1
    T_NOT       shift, and go to state 2
    T_TILDA     shift, and go to state 3
    T_MINUS     shift, and go to state 4
    T_NUMBER    shift, and go to state 5
    T_ID        shift, and go to state 6
    T_SIZE_OF   shift, and go to state 7

    ROOT         go to state 8
    EXPR         go to state 9
    TERM         go to state 10
    FACTOR       go to state 11
    NUMBER       go to state 12
    BITWISEOP    go to state 13
    ASSIGNOP     go to state 14
    CONDITIONOP  go to state 15


State 1

   16 FACTOR: T_LBRACKET . EXPR T_RBRACKET

    T_LBRACKET  shift, and go to state 1
    T_NOT       shift, and go to state 2
    T_TILDA     shift, and go to state 3
    T_MINUS     shift, and go to state 4
    T_NUMBER    shift, and go to state 5
    T_ID        shift, and go to state 6
    T_SIZE_OF   shift, and go to state 7

    EXPR         go to state 16
    TERM         go to state 10
    FACTOR       go to state 11
    NUMBER       go to state 12
    BITWISEOP    go to state 13
    ASSIGNOP     go to state 14
    CONDITIONOP  go to state 15


State 2

   46 CONDITIONOP: T_NOT . TERM

    T_LBRACKET  shift, and go to state 1
    T_NOT       shift, and go to state 2
    T_TILDA     shift, and go to state 3
    T_MINUS     shift, and go to state 4
    T_NUMBER    shift, and go to state 5
    T_ID        shift, and go to state 6
    T_SIZE_OF   shift, and go to state 7

    EXPR         go to state 17
    TERM         go to state 18
    FACTOR       go to state 11
    NUMBER       go to state 12
    BITWISEOP    go to state 13
    ASSIGNOP     go to state 14
    CONDITIONOP  go to state 15


State 3

   29 BITWISEOP: T_TILDA . TERM

    T_LBRACKET  shift, and go to state 1
    T_NOT       shift, and go to state 2
    T_TILDA     shift, and go to state 3
    T_MINUS     shift, and go to state 4
    T_NUMBER    shift, and go to state 5
    T_ID        shift, and go to state 6
    T_SIZE_OF   shift, and go to state 7

    EXPR         go to state 17
    TERM         go to state 19
    FACTOR       go to state 11
    NUMBER       go to state 12
    BITWISEOP    go to state 13
    ASSIGNOP     go to state 14
    CONDITIONOP  go to state 15


State 4

   25 NUMBER: T_MINUS . T_NUMBER

    T_NUMBER  shift, and go to state 20


State 5

   24 NUMBER: T_NUMBER .

    $default  reduce using rule 24 (NUMBER)


State 6

   17 FACTOR: T_ID . T_LBRACKET ARGUMENT_LIST_NO_TYPE T_RBRACKET
   19       | T_ID .
   22       | T_ID . T_INC
   23       | T_ID . T_DEC
   32 ASSIGNOP: T_ID . T_ASSIGN EXPR
   33         | T_ID . T_ADDASSIGN EXPR
   34         | T_ID . T_SUBASSIGN EXPR
   35         | T_ID . T_MULASSIGN EXPR
   36         | T_ID . T_DIVASSIGN EXPR
   37         | T_ID . T_MODASSIGN EXPR
   38         | T_ID . T_LSHIFTASSIGN EXPR
   39         | T_ID . T_RSHIFTASSIGN EXPR
   40         | T_ID . T_ANDASSIGN EXPR
   41         | T_ID . T_ORASSIGN EXPR
   42         | T_ID . T_XORASSIGN EXPR

    T_LBRACKET      shift, and go to state 21
    T_ASSIGN        shift, and go to state 22
    T_INC           shift, and go to state 23
    T_DEC           shift, and go to state 24
    T_ADDASSIGN     shift, and go to state 25
    T_SUBASSIGN     shift, and go to state 26
    T_MULASSIGN     shift, and go to state 27
    T_DIVASSIGN     shift, and go to state 28
    T_MODASSIGN     shift, and go to state 29
    T_LSHIFTASSIGN  shift, and go to state 30
    T_RSHIFTASSIGN  shift, and go to state 31
    T_ANDASSIGN     shift, and go to state 32
    T_XORASSIGN     shift, and go to state 33
    T_ORASSIGN      shift, and go to state 34

    $default  reduce using rule 19 (FACTOR)


State 7

   20 FACTOR: T_SIZE_OF . T_ID

    T_ID  shift, and go to state 35


State 8

    0 $accept: ROOT . $end

    $end  shift, and go to state 36


State 9

    1 ROOT: EXPR .
    6 EXPR: EXPR . T_COMMA TERM
    7     | EXPR . T_PLUS TERM
    8     | EXPR . T_MINUS TERM
   21 FACTOR: EXPR . T_QMARK EXPR T_COLON EXPR
   26 BITWISEOP: EXPR . T_AND TERM
   27          | EXPR . T_OR TERM
   28          | EXPR . T_XOR TERM
   30          | EXPR . T_LSHIFT TERM
   31          | EXPR . T_RSHIFT TERM
   43 CONDITIONOP: EXPR . T_LEQUAL TERM
   44            | EXPR . T_LAND TERM
   45            | EXPR . T_LOR TERM
   47            | EXPR . T_LNEQUAL TERM
   48            | EXPR . T_MORE TERM
   49            | EXPR . T_LESS TERM
   50            | EXPR . T_LMOREEQ TERM
   51            | EXPR . T_LLESSEQ TERM

    T_COMMA    shift, and go to state 37
    T_QMARK    shift, and go to state 38
    T_AND      shift, and go to state 39
    T_OR       shift, and go to state 40
    T_MORE     shift, and go to state 41
    T_LESS     shift, and go to state 42
    T_XOR      shift, and go to state 43
    T_PLUS     shift, and go to state 44
    T_MINUS    shift, and go to state 45
    T_LAND     shift, and go to state 46
    T_LOR      shift, and go to state 47
    T_LEQUAL   shift, and go to state 48
    T_LNEQUAL  shift, and go to state 49
    T_LLESSEQ  shift, and go to state 50
    T_LMOREEQ  shift, and go to state 51
    T_LSHIFT   shift, and go to state 52
    T_RSHIFT   shift, and go to state 53

    $default  reduce using rule 1 (ROOT)


State 10

    5 EXPR: TERM .
   13 TERM: TERM . T_TIMES FACTOR
   14     | TERM . T_DIVIDE FACTOR
   15     | TERM . T_MODULUS FACTOR

    T_TIMES    shift, and go to state 54
    T_DIVIDE   shift, and go to state 55
    T_MODULUS  shift, and go to state 56

    T_TIMES    [reduce using rule 5 (EXPR)]
    T_DIVIDE   [reduce using rule 5 (EXPR)]
    T_MODULUS  [reduce using rule 5 (EXPR)]
    $default   reduce using rule 5 (EXPR)


State 11

   12 TERM: FACTOR .

    $default  reduce using rule 12 (TERM)


State 12

   18 FACTOR: NUMBER .

    $default  reduce using rule 18 (FACTOR)


State 13

   10 EXPR: BITWISEOP .

    $default  reduce using rule 10 (EXPR)


State 14

    9 EXPR: ASSIGNOP .

    $default  reduce using rule 9 (EXPR)


State 15

   11 EXPR: CONDITIONOP .

    $default  reduce using rule 11 (EXPR)


State 16

    6 EXPR: EXPR . T_COMMA TERM
    7     | EXPR . T_PLUS TERM
    8     | EXPR . T_MINUS TERM
   16 FACTOR: T_LBRACKET EXPR . T_RBRACKET
   21       | EXPR . T_QMARK EXPR T_COLON EXPR
   26 BITWISEOP: EXPR . T_AND TERM
   27          | EXPR . T_OR TERM
   28          | EXPR . T_XOR TERM
   30          | EXPR . T_LSHIFT TERM
   31          | EXPR . T_RSHIFT TERM
   43 CONDITIONOP: EXPR . T_LEQUAL TERM
   44            | EXPR . T_LAND TERM
   45            | EXPR . T_LOR TERM
   47            | EXPR . T_LNEQUAL TERM
   48            | EXPR . T_MORE TERM
   49            | EXPR . T_LESS TERM
   50            | EXPR . T_LMOREEQ TERM
   51            | EXPR . T_LLESSEQ TERM

    T_RBRACKET  shift, and go to state 57
    T_COMMA     shift, and go to state 37
    T_QMARK     shift, and go to state 38
    T_AND       shift, and go to state 39
    T_OR        shift, and go to state 40
    T_MORE      shift, and go to state 41
    T_LESS      shift, and go to state 42
    T_XOR       shift, and go to state 43
    T_PLUS      shift, and go to state 44
    T_MINUS     shift, and go to state 45
    T_LAND      shift, and go to state 46
    T_LOR       shift, and go to state 47
    T_LEQUAL    shift, and go to state 48
    T_LNEQUAL   shift, and go to state 49
    T_LLESSEQ   shift, and go to state 50
    T_LMOREEQ   shift, and go to state 51
    T_LSHIFT    shift, and go to state 52
    T_RSHIFT    shift, and go to state 53


State 17

    6 EXPR: EXPR . T_COMMA TERM
    7     | EXPR . T_PLUS TERM
    8     | EXPR . T_MINUS TERM
   21 FACTOR: EXPR . T_QMARK EXPR T_COLON EXPR
   26 BITWISEOP: EXPR . T_AND TERM
   27          | EXPR . T_OR TERM
   28          | EXPR . T_XOR TERM
   30          | EXPR . T_LSHIFT TERM
   31          | EXPR . T_RSHIFT TERM
   43 CONDITIONOP: EXPR . T_LEQUAL TERM
   44            | EXPR . T_LAND TERM
   45            | EXPR . T_LOR TERM
   47            | EXPR . T_LNEQUAL TERM
   48            | EXPR . T_MORE TERM
   49            | EXPR . T_LESS TERM
   50            | EXPR . T_LMOREEQ TERM
   51            | EXPR . T_LLESSEQ TERM

    T_COMMA    shift, and go to state 37
    T_QMARK    shift, and go to state 38
    T_AND      shift, and go to state 39
    T_OR       shift, and go to state 40
    T_MORE     shift, and go to state 41
    T_LESS     shift, and go to state 42
    T_XOR      shift, and go to state 43
    T_PLUS     shift, and go to state 44
    T_MINUS    shift, and go to state 45
    T_LAND     shift, and go to state 46
    T_LOR      shift, and go to state 47
    T_LEQUAL   shift, and go to state 48
    T_LNEQUAL  shift, and go to state 49
    T_LLESSEQ  shift, and go to state 50
    T_LMOREEQ  shift, and go to state 51
    T_LSHIFT   shift, and go to state 52
    T_RSHIFT   shift, and go to state 53


State 18

    5 EXPR: TERM .
   13 TERM: TERM . T_TIMES FACTOR
   14     | TERM . T_DIVIDE FACTOR
   15     | TERM . T_MODULUS FACTOR
   46 CONDITIONOP: T_NOT TERM .

    T_TIMES    shift, and go to state 54
    T_DIVIDE   shift, and go to state 55
    T_MODULUS  shift, and go to state 56
